src/components/Cards/Cards.module.css
.cards {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  place-items: center;
  gap: 20px;
}

.card {
  max-width: 400px;
  height: 400px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
    0 2px 4px -1px rgba(0, 0, 0, 0.06);
}

.card-heading img {
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  height: 120px;
  width: 100%;
  object-fit: cover;
}
.card-body {
  padding: 1em;
}

.card-title h3 {
  font-weight: 200;
  font-size: 1.5rem;
}
.card-title span {
  color: gray;
  font-weight: 200;
  display: block;
}

.card-icons {
  margin: 1.5em 0;
}

.card-icons ul {
  display: flex;
  justify-content: space-between;
  list-style-type: none;
}

.card-icons li {
  display: flex;
  align-items: center;
}

.card-icons span {
  font-size: 0.82rem;
  margin: 0 0.45em;
}

.card-description {
  margin-top: 0.5em;
}
.card-description p {
  font-size: 0.81rem;
}
.card-ingredients {
  margin-top: 1em;
}
.card-ingredients span {
  font-size: 0.81rem;
}

